--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@sveltejs/kit": "^2.11.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.2",
     "autoprefixer": "^10.4.20",
-    "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "svelte": "^5.12.0",
@@ -32,6 +31,7 @@
     "daisyui": "^4.12.22",
     "lodash-es": "^4.17.21",
     "ol": "^10.3.1",
-    "postgres": "^3.4.5"
+    "postgres": "^3.4.5",
+    "sql-formatter": "^15.4.9"
   }
 }
