add leaflet map

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "@sveltejs/adapter-node": "^5.2.11",
+    "@types/leaflet": "^1.9.16",
     "@types/lodash-es": "^4.17.12",
     "daisyui": "^4.12.23",
+    "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
     "ol": "^10.3.1",
     "postgres": "^3.4.5",
