--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/kit": "^2.15.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/proj4": "^2.5.6",
     "autoprefixer": "^10.4.20",
     "prettier-plugin-svelte": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
@@ -34,6 +35,7 @@
     "lodash-es": "^4.17.21",
     "ol": "^10.3.1",
     "postgres": "^3.4.5",
+    "proj4": "^2.15.0",
     "sql-formatter": "^15.4.9"
   }
 }
