--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@types/lodash-es": "^4.17.12",
     "daisyui": "^4.12.23",
     "leaflet": "^1.9.4",
+    "leaflet.awesome-markers": "^2.0.5",
+    "leaflet.heat": "^0.2.0",
+    "leaflet.markercluster": "^1.5.3",
     "lodash-es": "^4.17.21",
     "ol": "^10.3.1",
     "postgres": "^3.4.5",
